# ROB320-Project-5

./: CMakeLists.txt  submit.sh  unzip_models.sh
include/rix/: rix.hpp
include/rix/core/: common.hpp  mediator.hpp  node.hpp  publisher.hpp  service.hpp  service_client.hpp  subscriber.hpp  timer.hpp
include/rix/core/interfaces/: spinner.hpp
include/rix/ipc/: client_tcp.hpp  connection_tcp.hpp  endpoint.hpp  server_tcp.hpp  socket.hpp
include/rix/ipc/interfaces/: client.hpp  connection.hpp  server.hpp
include/rix/msg/: serialization.hpp
include/rix/msg/geometry/: Inertia.hpp  InertiaStamped.hpp  Point.hpp  PointStamped.hpp  Pose.hpp  Pose2D.hpp  Pose2DStamped.hpp  PoseStamped.hpp  Quaternion.hpp  QuaternionStamped.hpp  TF.hpp  Transform.hpp  TransformStamped.hpp  Twist.hpp  Twist2D.hpp  Twist2DStamped.hpp  TwistStamped.hpp  Vector3.hpp  Vector3Stamped.hpp
include/rix/msg/mediator/: Endpoint.hpp  NodeInfo.hpp  Operation.hpp  PubInfo.hpp  SrvInfo.hpp  SrvRequest.hpp  SrvResponse.hpp  Status.hpp  SubInfo.hpp  SubNotify.hpp  TopicInfo.hpp
include/rix/msg/sensor/: ChannelFloat.hpp  JS.hpp  JointState.hpp  JointTrajectory.hpp  LaserScan.hpp  PointCloud.hpp
include/rix/msg/standard/: Bool.hpp  Color.hpp  Double.hpp  DoubleArray.hpp  Float.hpp  FloatArray.hpp  Header.hpp  Int16.hpp  Int16Array.hpp  Int32.hpp  Int32Array.hpp  Int64.hpp  Int64Array.hpp  Int8.hpp  Int8Array.hpp  String.hpp  StringArray.hpp  Time.hpp  UInt16.hpp  UInt16Array.hpp  UInt32.hpp  UInt32Array.hpp  UInt64.hpp  UInt64Array.hpp  UInt8.hpp  UInt8Array.hpp
include/rix/msg/trajectory_service_msgs/: TrajectoryRequest.hpp
include/rix/robot/: eigen_util.hpp  joint.hpp  kinematics_solver.hpp  link.hpp  msg_util.hpp  robot_model.hpp
include/rix/tf/: frame.hpp  frame_graph.hpp  transform_broadcaster.hpp  transform_buffer.hpp  transform_listener.hpp
include/setpoint_controller/: setpoint_controller.hpp
include/trajectory_service/: trajectory_service.hpp
lib/linux-aarch64/: rixhub
lib/linux-x86_64/: rixhub
lib/macos-aarch64/: rixhub
lib/macos-x86_64/: rixhub
msg_defs/: TrajectoryRequest.json
robots/: Fetch.json  MBotClassic.json  ReactorX-200.json  SimpleBot.json  Spot.json  UnitreeG1.json  urdf_to_json.py
src/rix/robot/: kinematics_solver.cpp
src/rixhub/: main.cpp
src/setpoint_controller/: main.cpp  setpoint_controller.cpp
src/trajectory_service/: main.cpp  trajectory_service.cpp
tests/: generated_kinematics_tests.cpp  robots.hpp
